--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
   },
   "author": "",
   "dependencies": {
+    "aws-sdk": "^2.54.0",
     "body-parser": "^1.17.1",
+    "cloudinary": "^1.9.0",
+    "connect-multiparty": "^2.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
+    "mysql": "^2.13.0",
     "util": "^0.10.3"
   }
 }
