--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connect-multiparty": "^2.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "express-session": "^1.15.3",
     "multer": "^1.3.0",
     "multer-s3": "^2.7.0",
     "mysql": "^2.13.0",
